--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://your-production-mysql-url:3306/to_do
+spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:3306/to_do
 spring.datasource.username=your-production-username
 spring.datasource.password=your-production-password
 spring.jpa.hibernate.ddl-auto=update
