--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://viaduct.proxy.rlwy.net:17221/to_do
-spring.datasource.username=your-production-username
-spring.datasource.password=your-production-password
+spring.datasource.username=root
+spring.datasource.password=teJBWVSaclJusfhzRwJOyriZiRgKNAxa
 spring.jpa.hibernate.ddl-auto=update
