--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,12 +2,12 @@
 #server.port=8181
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/to_do
-spring.datasource.username=root
-spring.datasource.password=mysql
+#spring.datasource.url=jdbc:mysql://localhost:3306/to_do
+#spring.datasource.username=root
+#spring.datasource.password=mysql
 
 # Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 
 ## Thymeleaf Configuration
 #spring.thymeleaf.prefix=classpath:/templates/
@@ -15,3 +15,7 @@ spring.jpa.hibernate.ddl-auto=update
 #spring.thymeleaf.mode=HTML
 #spring.thymeleaf.encoding=UTF-8
 #spring.thymeleaf.cache=false
+
+
+
+spring.profiles.active=${ENV:dev}
